tests/machine/x/kotlin/sum_builtin.error
line 3:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/sum_builtin.kt:3:26: error: unresolved reference: toInt
    for (n in list) s += toInt(n)
                         ^

  2:     var s = 0
  3:     for (n in list) s += toInt(n)
  4:     return s
